# MusicVault

./: .gitignore  CLAUDE.md  README.md  config.json  main.py  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-03-preset-system-plan.md
docs/superpowers/specs/: 2026-05-03-preset-system-design.md
src/musicvault/: __main__.py
src/musicvault/adapters/processors/: decryptor.py  downloader.py  lyrics.py  metadata_writer.py  organizer.py
src/musicvault/adapters/providers/: pyncm_client.py
src/musicvault/cli/: main.py  playlist.py
src/musicvault/core/: config.py  models.py  options.py  preset.py
src/musicvault/services/: process_service.py  run_service.py  sync_service.py
src/musicvault/shared/: output.py  tui_progress.py  utils.py
tests/: test_config_model.py  test_lyrics.py  test_lyrics_encoding.py  test_models.py  test_playlist_reconciliation.py  test_preset_model.py  test_preset_organizer.py
