[project]
name = "musicvault"
version = "0.1.0"
description = "Sync and process NetEase Cloud Music library locally"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyncm>=1.7.1",
    "mutagen>=1.47.0",
    "ncmdump-py>=0.2.0",
    "rich>=13.7.0",
    "qrcode>=8.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
musicvault = "musicvault.cli.main:main"
msv = "musicvault.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
